--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@optimexplus/polaris-vue",
+  "name": "@nguyenanh91/polaris-vue",
   "version": "1.0.0",
   "description": "Shopify Polaris for Vue 2",
   "main": "lib/polaris-vue.min.js",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nguyenanh91/polaris-vue.git"
+    "url": "git+https://github.com/nguyenanh91/polaris-vue.git"
   },
   "keywords": [],
   "author": "Andy Nguyen <nguyenanh.ktqd@outlook.com>",
@@ -40,5 +40,13 @@
     "change-case": "^3.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.6"
+  },
+  "bugs": {
+    "url": "https://github.com/nguyenanh91/polaris-vue/issues"
+  },
+  "homepage": "https://github.com/nguyenanh91/polaris-vue#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
